<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.1.0-RC1</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>

	<groupId>me.pacphi</groupId>
	<artifactId>spring-ai-resos-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>spring-ai-resos-parent</name>
	<description>
		This multi-module project hosts a client code-generated from an OpenAPI derivative of the ResOs API combined with a Spring AI implementation.
		It also includes an MCP server, MCP client configuration for use with Claude and a standalone ReactJS powered chatbot UI.
	</description>

	<prerequisites>
		<maven>3.9.11</maven>
	</prerequisites>

	<modules>
		<module>client</module>
		<module>codegen</module>
		<module>entities</module>
		<module>mcp-server</module>
		<module>backend</module>
		<module>mcp-client</module>
	</modules>

	<issueManagement>
		<url>https://github.com/pacphi/spring-ai-resos/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<licenses>
		<license>
			<name>Apache</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/pacphi/spring-ai-resos</url>
		<connection>scm:git:git://github.com/pacphi/spring-ai-resos.git</connection>
		<developerConnection>scm:git:git@github.com:pacphi/spring-ai-resos.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>pacphi</id>
			<name>Chris Phillipson</name>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<url>https://github.com/pacphi</url>
			<timezone>America/Seattle</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<!-- publish to GitHub gh-pages -->
		<site>
			<id>github</id>
			<name>Deployment through Maven's SCM Publish Plugin</name>
			<url>scm:git:git@github.com:pacphi/spring-ai-resos.git</url>
		</site>
	</distributionManagement>

	<properties>
		<java.version>25</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-ai.version>2.0.0-M7</spring-ai.version>
		<jackson-databind-nullable.version>0.2.8</jackson-databind-nullable.version>
		<spring-doc.version>3.0.1</spring-doc.version>
		<cfenv.version>3.5.1</cfenv.version>
		<commons-io.version>2.19.0</commons-io.version>
		<json-io.version>4.102.0</json-io.version>
		<junit-jupiter.version>6.0.2</junit-jupiter.version>
		<node.version>v23.4.0</node.version>
		<npm.version>10.9.2</npm.version>
		<spring-boot-hc5.version>2.0.0</spring-boot-hc5.version>
		<spring-cloud-bindings.version>2.0.4</spring-cloud-bindings.version>
		<swagger-annotations.version>2.2.42</swagger-annotations.version>
		<assertj.version>3.27.7</assertj.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
				<configuration>
					<!-- this is false by default, forces the plugin to generate the git.properties file -->
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<!-- The path for the properties file to be generated. See Super Pom for default variable reference https://maven.apache.org/guides/introduction/introduction-to-the-pom.html -->
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<commitIdGenerationMode>full</commitIdGenerationMode>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<skip>false</skip>
					<doclint>none</doclint>
					<additionalOptions>-Xdoclint:all -Xdoclint:-missing</additionalOptions>
					<!-- Default configuration for all reports -->
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<java>
						<excludes>
							<exclude>**/_*.java</exclude>
						</excludes>
						<eclipse>
							<version>4.33</version>
						</eclipse>
						<removeUnusedImports/>
					</java>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>4.9.3.0</version>
				<configuration>
					<excludeFilterFile>src/main/resources/spotbugs-exclude.xml</excludeFilterFile>
					<effort>Max</effort>
					<threshold>Low</threshold>
					<failOnError>true</failOnError>
					<!--
					  NOTE: SpotBugs 4.9.3.0 does not support Java 25 bytecode (class file
					  major version 69). Analysis is skipped until a version of SpotBugs that
					  supports Java 25 is available. Remove this property and re-enable once
					  https://github.com/spotbugs/spotbugs/issues/XXXX is resolved.
					-->
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>ch.acanda.maven</groupId>
				<artifactId>spring-banner-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<id>generate-spring-banner</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<info>Commit: ${git.commit.id.abbrev}, Version: ${project.version}, Active Profiles: ${spring.profiles.active:default}</info>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit-jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>tools.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>3.1.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>2025.1.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.pivotal.spring.cloud</groupId>
				<artifactId>spring-cloud-services-dependencies</artifactId>
				<version>4.4.0</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>github</id>
			<distributionManagement>
				<site>
					<id>github</id>
					<name>Deployment through Maven's SCM Publish Plugin</name>
					<url>scm:git:git@github.com:pacphi/spring-ai-resos.git</url>
				</site>
				<repository>
					<id>github</id>
					<name>GitHub Packages</name>
					<url>https://maven.pkg.github.com/pacphi/spring-ai-resos</url>
				</repository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>maven-central</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.10.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<tokenAuth>true</tokenAuth>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
